# Rippopotamus

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PRE_RELEASE_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.electron.json  tsconfig.json  vercel.json  vite.config.ts
docs/: current-tech-and-improvement-map.md  media-library-blueprint.md  media-library-mvp-checklist.md  provider-boundaries.md  rippo-agent-cli-surface.md  rippo-architecture-lld.md  semantic-indexing-daxt.md  semantic-media-memory-hypothesis.md  semantic-script-approach.md  tauri-migration-lld.md  ytdlp-updater-lld.md
electron/: appPaths.ts  browserIpc.ts  cookies.ts  engineIpc.ts  engineProcess.ts  indexIpc.ts  libraryIpc.ts  main.ts  mediaLibrary.ts  pageProbePolicy.ts  preload.ts  settingsStore.ts  toolUpdatesIpc.ts  types.d.ts
eval/: queries.json
experiments/: README.md
packaging/: engine_entry.py
scripts/: after-pack.cjs  build-engine.sh  build-latest-json.mjs  import-occ-xlsx.py  import-tracker-sheet.py  install-aria2c-resource.mjs  install-ffmpeg-static-target.mjs  run-tests.mjs  run-workspace.mjs  stage-tauri-resources.mjs  verify-media-library-slice.mjs  verify-package-artifact.mjs  verify-packaged-engine-health.mjs
tests/: electron_cookie_validation.test.cjs  electron_media_library_validation.test.cjs  electron_page_probe_policy_validation.test.cjs  electron_path_guard_validation.test.cjs  electron_thumbnail_validation.test.cjs  library_preview_contract.test.cjs  test_agent_cli.py  test_cli.py  (+11 more)
(+176 files in other folders)
